--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -45,10 +45,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "68c4ee2d-e6ca-4c63-b65c-340015386d87",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
-    "# # Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
+    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "# !echo \"Installation in progress...\"\n",
     "# import sys\n",
     "# !{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
@@ -60,14 +64,20 @@
     "#     tensorboardX \\\n",
     "#     pillow \\\n",
     "#     ipywidgets \\\n",
-    "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
+    "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install invisible-watermark --user > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0fe0f41a-baea-4cdf-ac53-be8700eea3e0",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from io import BytesIO\n",
@@ -131,6 +141,9 @@
    "id": "31324959-3ade-40d7-bbf5-feb885d931f4",
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -393,6 +406,9 @@
    "execution_count": null,
    "id": "e012d657-7fe4-426e-bdeb-033701a38a52",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -574,7 +590,11 @@
   {
    "cell_type": "markdown",
    "id": "1915e149-0ad6-475d-9b16-b34eb3d2806a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Reference and Guidelines for Models Used in This Notebook\n",
     "\n",
@@ -645,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
