--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -36,7 +36,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e47145a5-c2b2-4957-8ce0-51c0fb1bf9a5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
@@ -56,7 +60,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1abc93ee-117e-4d10-a97c-c26429b38159",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -165,6 +173,9 @@
    "id": "fa2f29e9-cd41-4605-aafc-f5aaaf440469",
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -452,7 +463,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "42264502-ffdd-47e1-af1e-f7407c4b365f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def main():\n",
@@ -555,7 +570,11 @@
   {
    "cell_type": "markdown",
    "id": "2d0d5473-e7fe-4de0-a8c0-f49ba924f35d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Language Models Disclaimer and Information\n",
     "\n",
@@ -606,14 +625,6 @@
     "\n",
     "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9c25c0c-d37a-499b-a551-8048cb54a011",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
