--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -36,17 +36,33 @@
     "\n",
     "This notebook is powered by Intel® Data Center GPU Max Series and will walk you through examples, help you understand the outputs, and give pointers on how to get the best results. No technical deep dives, just clear steps and explanations.\n",
     "\n",
-    "Ready to turn your words into visuals? Let's get started by setting up few things and importing the required python packages!"
+    "Read to turn your words into visuals?, Let's get started!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09bf1a19-7461-4880-9fab-d54260644c83",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
+    "Let's get started by setting up few things and importing the required python packages!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "791c50f9-4524-4410-8ff9-2c55dc674950",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
-    "# # Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
+    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "# #import sys\n",
     "# !echo \"Installation in progress...\"\n",
     "# !conda install -y --quiet  --prefix {sys.prefix} -c conda-forge \\\n",
@@ -65,7 +81,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ee25d6c0-1c17-4497-bd74-f7795887d7e2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from io import BytesIO\n",
@@ -99,11 +119,11 @@
     "\n",
     "For those intrigued by the underpinnings of this adventure, let's delve into the technicalities of the code. No worries if you're not aiming for a deep dive; understanding this isn't a prerequisite to harness the magic of the notebook. But for the tech-curious, let's dissect:\n",
     "\n",
-    "- **Class Blueprint**: At the heart of our operations is the `Text2ImgModel` class. This acts as the central hub, choreographing the process of transforming textual prompts into visual masterpieces.\n",
+    "- **Class**: At the heart of our operations is the `Text2ImgModel` class. This acts as the central hub, choreographing the process of transforming textual prompts into visual masterpieces.\n",
     "\n",
     "- **Initialization**: When we instantiate this class, we have the liberty to tailor its behavior. This includes selecting the model's path, the device (defaulting to Intel's \"xpu\"), the data type, and more. There are also provisions to supercharge the model's performance via optimizations.\n",
     "\n",
-    "- **Model Loading**: The `_load_pipeline` function is where we bring the pre-trained model onboard. This sets the stage for all our text-to-image transformations.\n",
+    "- **Pipeline Loading**: The `_load_pipeline` function is where we bring the pre-trained model onboard. This sets the stage for all our text-to-image transformations.\n",
     "\n",
     "- **Optimization**: Performance is paramount. With the `_optimize_pipeline` and `optimize_pipeline` methods, we leverage Intel-specific optimizations using the Intel Extension For PyTorch (IPEX) to ensure our model runs like the wind.\n",
     "\n",
@@ -111,7 +131,7 @@
     "\n",
     "- **The Grand Finale - Image Generation**: The `generate_images` method is where dreams meet reality. It interprets the textual prompts, consults with the model, and then crafts images that encapsulate the essence of the prompts. You can specify the number of images, the number of noise removal steps, and even the save path for these artworks.\n",
     "\n",
-    "Intrigued? Dive into the code below and see how we've meticulously tailored every aspect, ensuring it's primed for Intel GPUs.\n",
+    "Intrigued? Dive into the code below and see how we've tailored every aspect, ensuring it's optimized for Intel GPUs.\n",
     "\n",
     "---\n"
    ]
@@ -122,6 +142,9 @@
    "id": "be12d985-31b5-4a03-b976-74787558fc0f",
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -345,7 +368,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0f41a449-ae30-4853-a2b5-d34b6cbdbc9a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -512,6 +539,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run all cells before running this section.\n",
     "prompt_to_image()"
    ]
   },
@@ -519,6 +547,9 @@
    "cell_type": "markdown",
    "id": "3c760991-214d-4990-8153-25b5dc032618",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "source": [
@@ -569,14 +600,6 @@
     "\n",
     "For detailed information on each model's capabilities, limitations, and best practices, please refer to the respective model cards and associated publications linked below."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed1f3a47-f6be-4ce1-8439-9e95bb1eb64a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
