--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -11,9 +11,9 @@
     "tags": []
    },
    "source": [
-    "# Welcome to the Gen AI Playground!\n",
+    "# Welcome to the Gen AI Essentials!\n",
     "\n",
-    "Hello there! We're excited to have you explore the wonders of generative AI. This playground is designed for everyone — from AI creators and artists to engineers and the just-plain curious. And the best part? It's all powered by [Intel® Data Center GPU Max 1100](https://www.intel.com/content/www/us/en/products/sku/232876/intel-data-center-gpu-max-1100/specifications.html).\n",
+    "Hello there! We're excited to have you explore the wonders of generative AI. This set of notebooks are designed for everyone — from AI creators and artists to engineers and the just-plain curious. And the best part? It's all powered by [Intel® Data Center GPU Max 1100](https://www.intel.com/content/www/us/en/products/sku/232876/intel-data-center-gpu-max-1100/specifications.html).\n",
     "\n",
     "## What's Inside\n",
     "\n",
@@ -33,7 +33,7 @@
     "\n",
     "So, what are you waiting for? Dive into one of the notebooks above and start your journey into the fascinating world of Generative AI!\n",
     "\n",
-    "Wishing you an exciting exploration in the Gen AI Playground!\n"
+    "Wishing you an exciting exploration of GenAI on Intel XPUs!\n"
    ]
   },
   {
