--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -42,11 +42,7 @@
   {
    "cell_type": "markdown",
    "id": "09bf1a19-7461-4880-9fab-d54260644c83",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "Let's get started by setting up few things and importing the required python packages!"
    ]
@@ -142,9 +138,6 @@
    "id": "be12d985-31b5-4a03-b976-74787558fc0f",
    "metadata": {
     "editable": true,
-    "jupyter": {
-     "source_hidden": true
-    },
     "slideshow": {
      "slide_type": ""
     },
@@ -368,11 +361,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0f41a449-ae30-4853-a2b5-d34b6cbdbc9a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -387,6 +376,7 @@
     "from IPython.display import Image as IPImage\n",
     "import ipywidgets as widgets\n",
     "\n",
+    "model_cache = {}\n",
     "\n",
     "def prompt_to_image():\n",
     "    out = widgets.Output()\n",
@@ -438,9 +428,13 @@
     "            print(\"\\nGenerating Images, once generated images will be saved `./output` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
+    "            model_key = (model_id, \"xpu\")\n",
+    "            if model_key not in model_cache:\n",
+    "                model_cache[model_key] = Text2ImgModel(model_id, device=\"xpu\")\n",
     "            prompt = prompt_text.value\n",
     "            num_images = num_images_slider.value\n",
-    "            model = Text2ImgModel(model_id, device=\"xpu\")\n",
+    "            #model = Text2ImgModel(model_id, device=\"xpu\")\n",
+    "            model = model_cache[model_key]\n",
     "            \n",
     "            enhancements = [\n",
     "                \"dark\",\n",
@@ -463,7 +457,8 @@
     "                \"electric\",\n",
     "                \"night\",\n",
     "            ]\n",
-    "            \n",
+    "            if not prompt:\n",
+    "                prompt = \" \"\n",
     "            if enhance_checkbox.value:\n",
     "                prompt = prompt + \" \" + \" \".join(random.sample(enhancements, 5))\n",
     "                print(f\"Using enhanced prompt: {prompt}\")    \n",
@@ -490,20 +485,22 @@
     "def display_generated_images(output_dir=\"output\"):\n",
     "    image_files = [f for f in os.listdir(output_dir) if f.endswith((\".png\", \".jpg\"))]    \n",
     "    num_images = len(image_files)\n",
-    "    grid_size = int(np.ceil(np.sqrt(num_images)))\n",
-    "    fig, axs = plt.subplots(grid_size, grid_size, figsize=(15, 15))    \n",
+    "    num_columns = int(np.ceil(np.sqrt(num_images)))\n",
+    "    num_rows = int(np.ceil(num_images / num_columns))\n",
+    "    fig, axs = plt.subplots(num_rows, num_columns, figsize=(15 * num_columns / num_columns, 15 * num_rows / num_rows))\n",
     "    if num_images == 1:\n",
     "        axs = np.array([[axs]])\n",
-    "    elif grid_size == 1:\n",
+    "    elif num_columns == 1 or num_rows == 1:\n",
     "        axs = np.array([axs])\n",
     "    for ax, image_file in zip(axs.ravel(), image_files):\n",
     "        img = mp_img.imread(os.path.join(output_dir, image_file))\n",
     "        ax.imshow(img)\n",
-    "        ax.axis(\"off\")\n",
+    "        ax.axis(\"off\")  # Hide axes\n",
     "    for ax in axs.ravel()[num_images:]:\n",
-    "        ax.axis(\"off\") \n",
+    "        ax.axis(\"off\")\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n"
+    "    print(f\"\\nGenerated images...:\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -547,9 +544,6 @@
    "cell_type": "markdown",
    "id": "3c760991-214d-4990-8153-25b5dc032618",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
