--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -141,9 +141,6 @@
    "id": "31324959-3ade-40d7-bbf5-feb885d931f4",
    "metadata": {
     "editable": true,
-    "jupyter": {
-     "source_hidden": true
-    },
     "slideshow": {
      "slide_type": ""
     },
@@ -406,9 +403,6 @@
    "execution_count": null,
    "id": "e012d657-7fe4-426e-bdeb-033701a38a52",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -428,6 +422,8 @@
     "from IPython.display import HTML\n",
     "from IPython.display import Image as IPImage\n",
     "from ipywidgets import VBox, HBox\n",
+    "\n",
+    "model_cache = {}\n",
     "\n",
     "def image_to_image():\n",
     "    out = widgets.Output()\n",
@@ -481,6 +477,7 @@
     "            print(\"Generating Images, once generated images will be saved `./image_to_image` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
+    "            model_key = (model_id, \"xpu\")\n",
     "            prompt = prompt_text.value\n",
     "            num_images = num_images_slider.value\n",
     "            image_url = image_url_text.value\n",
@@ -488,7 +485,10 @@
     "            if not validators.url(image_url):\n",
     "                print(\"The input is not a valid URL. Using the default URL instead.\")\n",
     "                image_url = \"https://user-images.githubusercontent.com/786476/256401499-f010e3f8-6f8d-4e9f-9d1f-178d3571e7b9.png\"       \n",
-    "            model = Img2ImgModel(model_id, device=\"xpu\")\n",
+    "            #model = Img2ImgModel(model_id, device=\"xpu\")\n",
+    "            if model_key not in model_cache:\n",
+    "                model_cache[model_key] = Img2ImgModel(model_id, device=\"xpu\")\n",
+    "            model = model_cache[model_key]\n",
     "            enhancements = [\n",
     "            \"purple light\",\n",
     "            \"dreaming\",\n",
@@ -509,7 +509,8 @@
     "            \"electric\",\n",
     "            \"night\",\n",
     "            ]\n",
-    "            \n",
+    "            if not prompt:\n",
+    "                prompt = \" \"\n",
     "            if enhance_checkbox.value:\n",
     "                prompt = prompt + \" \" + \" \".join(random.sample(enhancements, 5))\n",
     "                print(f\"Using enhanced prompt: {prompt}\")    \n",
@@ -535,19 +536,21 @@
     "def display_generated_images(image_to_image_dir=\"image_to_image\"):\n",
     "    image_files = [f for f in os.listdir(image_to_image_dir) if f.endswith((\".png\", \".jpg\"))]    \n",
     "    num_images = len(image_files)\n",
-    "    grid_size = int(np.ceil(np.sqrt(num_images)))\n",
-    "    fig, axs = plt.subplots(grid_size, grid_size, figsize=(15, 15))    \n",
+    "    num_columns = int(np.ceil(np.sqrt(num_images)))\n",
+    "    num_rows = int(np.ceil(num_images / num_columns))\n",
+    "    fig, axs = plt.subplots(num_rows, num_columns, figsize=(10 * num_columns / num_columns, 10 * num_rows / num_rows))\n",
     "    if num_images == 1:\n",
     "        axs = np.array([[axs]])\n",
-    "    elif grid_size == 1:\n",
+    "    elif num_columns == 1 or num_rows == 1:\n",
     "        axs = np.array([axs])\n",
     "    for ax, image_file in zip(axs.ravel(), image_files):\n",
     "        img = mp_img.imread(os.path.join(image_to_image_dir, image_file))\n",
     "        ax.imshow(img)\n",
     "        ax.axis(\"off\")  # Hide axes\n",
     "    for ax in axs.ravel()[num_images:]:\n",
-    "        ax.axis(\"off\") \n",
+    "        ax.axis(\"off\")\n",
     "    plt.tight_layout()\n",
+    "    print(f\"\\nGenerated images...:\")\n",
     "    plt.show()"
    ]
   },
@@ -665,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
