tweak notebook view

--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -138,6 +138,9 @@
    "id": "be12d985-31b5-4a03-b976-74787558fc0f",
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -213,7 +216,7 @@
     "        model_path = Path(f\"/home/common/data/Big_Data/GenAI/{model_id_or_path}\")  \n",
     "        \n",
     "        if model_path.exists():\n",
-    "            print(f\"Loading the model from {model_path}...\")\n",
+    "            #print(f\"Loading the model from {model_path}...\")\n",
     "            load_path = model_path\n",
     "        else:\n",
     "            print(\"Using the default path for models...\")\n",
@@ -361,7 +364,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0f41a449-ae30-4853-a2b5-d34b6cbdbc9a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
