--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -141,6 +141,9 @@
    "id": "31324959-3ade-40d7-bbf5-feb885d931f4",
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -205,7 +208,7 @@
     "        model_path = Path(f\"/home/common/data/Big_Data/GenAI/{model_id_or_path}\")\n",
     "        \n",
     "        if model_path.exists():\n",
-    "            print(f\"Loading the model from {model_path}...\")\n",
+    "            #print(f\"Loading the model from {model_path}...\")\n",
     "            load_path = model_path\n",
     "        else:\n",
     "            print(\"Using the default path for models...\")\n",
@@ -403,6 +406,9 @@
    "execution_count": null,
    "id": "e012d657-7fe4-426e-bdeb-033701a38a52",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -472,8 +478,8 @@
     "    \n",
     "    \n",
     "    def on_submit(button):\n",
-    "        clear_output(wait=True)\n",
     "        with out:\n",
+    "            clear_output(wait=True)\n",
     "            print(\"Generating Images, once generated images will be saved `./image_to_image` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
