--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -303,7 +303,7 @@
     "                image_url=image_url,\n",
     "                prompt=\"A beautiful day\",\n",
     "                num_images=1,\n",
-    "                save_path=\"/tmp\",\n",
+    "                save_path=\".tmp\",\n",
     "            )\n",
     "        except Exception:\n",
     "            print(\"model warmup delayed...\")\n",
