--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -49,14 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "791c50f9-4524-4410-8ff9-2c55dc674950",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installation successful\n"
+     ]
+    }
+   ],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "# #import sys\n",
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ee25d6c0-1c17-4497-bd74-f7795887d7e2",
    "metadata": {
     "jupyter": {
@@ -276,7 +284,7 @@
     "        self.generate_images(\n",
     "            prompt=\"A beautiful sunset over the mountains\",\n",
     "            num_images=1,\n",
-    "            save_path=\"/tmp\",\n",
+    "            save_path=\".tmp\",\n",
     "        )\n",
     "        print(\n",
     "            \"Model is set up and ready! Warm-up completed in {:.2f} seconds.\".format(\n",
@@ -551,6 +559,9 @@
    "cell_type": "markdown",
    "id": "3c760991-214d-4990-8153-25b5dc032618",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "source": [
