tweaking for better resp

--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -210,6 +210,7 @@
     "        \"\"\"\n",
     "        self.torch_dtype = torch_dtype\n",
     "        self.device = select_device(\"xpu\")\n",
+    "        self.model_id_or_path = model_id_or_path\n",
     "        if (\n",
     "            self.device == self.device.startswith(\"xpu\")\n",
     "            if isinstance(self.device, str)\n",
@@ -263,6 +264,10 @@
     "    def prepare_input(self, previous_text, user_input):\n",
     "        \"\"\"Prepare the input for the model, ensuring it doesn't exceed the maximum length.\"\"\"\n",
     "        response_buffer = 100\n",
+    "        user_input = (\n",
+    "             \"Below is an instruction that describes a task. \"\n",
+    "            \"Write a response that appropriately completes the request.\\n\\n\"\n",
+    "            f\"### Instruction:\\n{user_input}\\n\\n### Response:\")\n",
     "        combined_text = previous_text + \"\\nUser: \" + user_input + \"\\nBot: \"\n",
     "        input_ids = self.tokenizer.encode(\n",
     "            combined_text, return_tensors=\"pt\", truncation=False\n",
@@ -331,6 +336,15 @@
     "            repetition_penalty=repetition_penalty,\n",
     "        )\n",
     "\n",
+    "    def strip_response(self, generated_text):\n",
+    "        \"\"\"Remove ### Response: from string if exists.\"\"\"\n",
+    "        match = re.search(r'### Response:(.*)', generated_text, re.S)\n",
+    "        if match:\n",
+    "            return match.group(1).strip()\n",
+    "    \n",
+    "        else:\n",
+    "            return generated_text\n",
+    "        \n",
     "    def unique_sentences(self, text: str) -> str:\n",
     "        sentences = text.split(\". \")\n",
     "        if sentences[-1] and sentences[-1][-1] != \".\":\n",
@@ -406,9 +420,16 @@
     "            display(HBox([user_input_widget, send_button]))\n",
     "            def on_send(button):\n",
     "                nonlocal previous_text\n",
+    "                orig_input = \"\"\n",
     "                user_input = user_input_widget.value\n",
     "                if user_input.lower() == \"exit\":\n",
     "                    return\n",
+    "                if \"camel\" in self.model_id_or_path:\n",
+    "                        orig_input = user_input\n",
+    "                        user_input = (\n",
+    "                            \"Below is an instruction that describes a task. \"\n",
+    "                            \"Write a response that appropriately completes the request.\\n\\n\"\n",
+    "                            f\"### Instruction:\\n{user_input}\\n\\n### Response:\")\n",
     "                if with_context:\n",
     "                    input_ids = self.prepare_input(previous_text, user_input)\n",
     "                else:\n",
@@ -423,10 +444,13 @@
     "                    repetition_penalty=repetition_penalty,\n",
     "                )\n",
     "                generated_text = self.tokenizer.decode(output_ids[0], skip_special_tokens=True)\n",
+    "                generated_text = self.strip_response(generated_text)\n",
     "                generated_text = self.extract_bot_response(generated_text)\n",
     "                generated_text = self.remove_repetitions(generated_text, user_input)\n",
     "    \n",
     "                with out:\n",
+    "                    if orig_input:\n",
+    "                        user_input = orig_input\n",
     "                    print(f\"You: {user_input}\")\n",
     "                    print(f\"Bot: {generated_text}\")\n",
     "    \n",
@@ -470,6 +494,8 @@
    },
    "outputs": [],
    "source": [
+    "model_cache = {}\n",
+    "\n",
     "def main():\n",
     "    models = [\"openlm-research/open_llama_3b_v2\", \"Writer/camel-5b-hf\", ]\n",
     "    interaction_modes = [\"Interact with context\", \"Interact without context\"]\n",
@@ -504,16 +530,18 @@
     "        top_k = top_k_slider.value\n",
     "        num_beams = num_beams_slider.value\n",
     "        repetition_penalty = repetition_penalty_slider.value\n",
-    "        \n",
-    "\n",
-    "        bot = ChatBotModel(model_id_or_path=model_choice)\n",
-    "        bot.warmup_model(\n",
-    "            temperature=temperature,\n",
-    "            top_p=top_p,\n",
-    "            top_k=top_k,\n",
-    "            num_beams=num_beams,\n",
-    "            repetition_penalty=repetition_penalty,\n",
-    "        )\n",
+    "        model_key = (model_choice, \"xpu\")\n",
+    "        if model_key not in model_cache:\n",
+    "            model_cache[model_key] = ChatBotModel(model_id_or_path=model_choice)\n",
+    "        bot = model_cache[model_key]\n",
+    "        if model_key not in model_cache:\n",
+    "            bot.warmup_model(\n",
+    "                temperature=temperature,\n",
+    "                top_p=top_p,\n",
+    "                top_k=top_k,\n",
+    "                num_beams=num_beams,\n",
+    "                repetition_penalty=repetition_penalty,\n",
+    "            )\n",
     "        \n",
     "        with out:\n",
     "            print(\"Ready!\")\n",
@@ -570,11 +598,7 @@
   {
    "cell_type": "markdown",
    "id": "2d0d5473-e7fe-4de0-a8c0-f49ba924f35d",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "## Language Models Disclaimer and Information\n",
     "\n",
