tweak text to image

--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -49,22 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "791c50f9-4524-4410-8ff9-2c55dc674950",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installation successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "# #import sys\n",
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ee25d6c0-1c17-4497-bd74-f7795887d7e2",
    "metadata": {
     "jupyter": {
@@ -109,7 +101,10 @@
     "import intel_extension_for_pytorch as ipex  # Used for optimizing PyTorch models\n",
     "from PIL import Image\n",
     "\n",
-    "from diffusers import DiffusionPipeline, DPMSolverMultistepScheduler"
+    "from diffusers import DiffusionPipeline, DPMSolverMultistepScheduler\n",
+    "from diffusers import logging\n",
+    "\n",
+    "logging.set_verbosity_error()"
    ]
   },
   {
@@ -142,10 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "be12d985-31b5-4a03-b976-74787558fc0f",
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -367,9 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0f41a449-ae30-4853-a2b5-d34b6cbdbc9a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -495,7 +497,7 @@
     "    num_images = len(image_files)\n",
     "    num_columns = int(np.ceil(np.sqrt(num_images)))\n",
     "    num_rows = int(np.ceil(num_images / num_columns))\n",
-    "    fig, axs = plt.subplots(num_rows, num_columns, figsize=(15 * num_columns / num_columns, 15 * num_rows / num_rows))\n",
+    "    fig, axs = plt.subplots(num_rows, num_columns, figsize=(10 * num_columns / num_columns, 10 * num_rows / num_rows))\n",
     "    if num_images == 1:\n",
     "        axs = np.array([[axs]])\n",
     "    elif num_columns == 1 or num_rows == 1:\n",
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "df8d6b65-39b9-4472-b6a6-878e4c2cefdc",
    "metadata": {
     "editable": true,
@@ -542,50 +544,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbdf1e2a16304fc9a6739de0d911203f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(Dropdown(description='Select Model:', options=('CompVis/stable-diffusion-v1-4', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87653dd49f2847fb994e9a0d2dd0a544",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Generate Images!', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "877b7f15a0104e56981265bdd7e87330",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run all cells before running this section.\n",
     "prompt_to_image()"
