--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -101,10 +101,7 @@
     "import intel_extension_for_pytorch as ipex  # Used for optimizing PyTorch models\n",
     "from PIL import Image\n",
     "\n",
-    "from diffusers import DiffusionPipeline, DPMSolverMultistepScheduler\n",
-    "from diffusers import logging\n",
-    "\n",
-    "logging.set_verbosity_error()"
+    "from diffusers import DiffusionPipeline, DPMSolverMultistepScheduler"
    ]
   },
   {
@@ -395,7 +392,6 @@
     "    model_ids = [\n",
     "        \"CompVis/stable-diffusion-v1-4\",\n",
     "        \"stabilityai/stable-diffusion-2-1\",\n",
-    "        \"stabilityai/stable-diffusion-xl-base-1.0\",\n",
     "    ]    \n",
     "    \n",
     "    model_dropdown = widgets.Dropdown(\n",
@@ -589,11 +585,6 @@
     "    }\n",
     "    ```\n",
     "\n",
-    "### stable-diffusion-xl-base-1.0\n",
-    "- **Model card:** [stabilityai/stable-diffusion-xl-base-1.0](https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0)\n",
-    "- **License:** CreativeML Open RAIL++-M License\n",
-    "\n",
-    "\n",
     "### Disclaimer for Using Stable Diffusion Models\n",
     "\n",
     "The stable diffusion models provided here are powerful tools for high-resolution image synthesis, including text-to-image and image-to-image transformations. While they are designed to produce high-quality results, users should be aware of potential limitations:\n",
@@ -604,6 +595,14 @@
     "\n",
     "For detailed information on each model's capabilities, limitations, and best practices, please refer to the respective model cards and associated publications linked below."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8cc5f23-fa6d-4ed9-a842-62d8a9acda14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
