--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -567,7 +567,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Let's Dive In! and Witness the Magi**\n",
+    "**Let's Dive In! and Witness the Magic**\n",
     "\n",
     "Ready to generate some amazing images? Just interact with the user interface below. Once you've set your preferences, click the \"Generate Images!\" button to witness the power of Stable Diffusion in action.\n",
     "\n",
@@ -599,11 +599,7 @@
   {
    "cell_type": "markdown",
    "id": "1915e149-0ad6-475d-9b16-b34eb3d2806a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "## Reference and Guidelines for Models Used in This Notebook\n",
     "\n",
