--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -497,7 +497,7 @@
     "model_cache = {}\n",
     "\n",
     "def main():\n",
-    "    models = [\"openlm-research/open_llama_3b_v2\", \"Writer/camel-5b-hf\", ]\n",
+    "    models = [\"Writer/camel-5b-hf\", \"openlm-research/open_llama_3b_v2\",]\n",
     "    interaction_modes = [\"Interact with context\", \"Interact without context\"]\n",
     "    model_dropdown = Dropdown(options=models, value=models[0], description=\"Model:\")\n",
     "    interaction_mode = Dropdown(options=interaction_modes, value=interaction_modes[1], description=\"Interaction:\")\n",
@@ -545,7 +545,8 @@
     "        \n",
     "        with out:\n",
     "            print(\"Ready!\")\n",
-    "            print(\"\\nNote: This is a demonstration using pretrained models which were not fine-tuned for chat.\\n\")      \n",
+    "            print(\"\\nNote: This is a demonstration using pretrained models which were not fine-tuned for chat.\")\n",
+    "            print(\"If the bot doesn't respond, try restarting the kernel.\\n\")\n",
     "        try:\n",
     "            with out:\n",
     "                bot.interact(\n",
